--- a/templates/post.html
+++ b/templates/post.html
@@ -86,8 +86,7 @@
                     <div id="text">
                     <h3>30/10/2024</h3>
                     <div class="text">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos ration
-                         reprehenderit impedilit corporis vero atque qui d
+                        Lorem ipsum dolor, sit amet consecteatque qui d
                     </div>
                 </div>
                 </div>
@@ -98,8 +97,7 @@
                     <div id="text">
                     <h3>30/10/2024</h3>
                     <div class="text">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos ration
-                         reprehenderit impedilit corporis vero atque qui d
+                        Lorem ipsum dolor, sit amet cvero atque qui d
                     </div>
                 </div>
                 </div>
