--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,9 +32,7 @@ body{
 a{
     text-decoration: none;
 }
-.container{
-    display: block;
-}
+
 .container-body{
     display: block;
 }
@@ -42,59 +40,55 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    margin: 20px;
 
 }
 .all_article{
-    width: 500px;
-    display: flex;
-    overflow: hidden;
+    width: 900px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 20px;
+    margin: 20px;
+    background:rgba(246, 252, 252, 0.616);
+    border-radius: 10px;
+    padding: 10px;
+   
 }
 
 .article{
     width: 100%;
     border: 1px solid white;
     color: white;
-    display: gird;
-    grid-template-columns: auto;
     border-radius: 10px;
-    flex: none
+    background: #070F2B;
+    
     
 }
 .profile{
     display: flex;
     justify-content: space-between;
-    margin: 10px;
+    margin-top: 10px;
 }
 .profile-image{
     display: flex;
     gap: 10px;
     align-items: center;
 }
-.profile .image{
-    border: 1px solid white;
-    width: 50px;
-    height: 50px;
-    border-radius: 50px;
-    
-}
+
 .article-image{
    
     width: 100%;
-    height: 300px;
+    
    
 }
 
-.description{
-    font-size: 15px;
-}
 
-.article-body{
-    margin: 20px;
-}
+
 
 .article-body .text{
     margin-top: 20px;
-    font-size: 30px;
+    
 }
 
 .new-page{
@@ -128,7 +122,26 @@ a{
     
 }
 
-#backBtn, #nextBtn{
-    width: 50px;
-    margin: 20px;
+@media screen and (width: 450px){
+    
+    .text{
+        font-size: 12px;
+        
+    }
+    .description{
+        font-size: 12px;
+    }
+    .date-creation{
+        font-size: 12px;
+    }
+    .new-page{
+        font-size: 14px;
+        margin-top: 10px;
+    }
+    .nav-content .nav-text{
+        text-align: center;
+        color: white;
+        font-size:20px;
+        margin-top: 100px;
+     }
 }
