--- a/templates/index.html
+++ b/templates/index.html
@@ -25,66 +25,28 @@
             </div>
             <!-- all_center  -->
             <div class="article-container">
-                <img src="/static/image/back.png" alt="" id="backBtn">
+                
                 <div class="all_article">
                     
-                    <!--Vrai ===========================================Vrai-->
-                    <div class="article">
-                        <div>
-                            <div class="article-body">
-                            <div class="profile">
-                                <div class="profile-image">
-                                    <div class="image">
-                                        <img src="/static/image/blank-profile-picture.png" alt="">
-                                    </div>
-                                    <div class="description">
-                                        <h2>name</h2>
-                                        <h4>description</h4>
-                                    </div>
-                                </div>
-                                
-                                
-                                <div class="date-creation">
-                                    <h2>03</h2>
-                                    <h4>March 2021</h4>
-                                </div>
-                            </div>
-                        
-                            <div class="article-image">
-                                <img src="/media/article_image/img2.jpg" alt="">
-                            </div>
-                            <div class="text">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam 
-                                ullam error sit, dolore distinctio tempore numquam debitis ut 
-                                perspiciatis adipisci +++++++++++++++++++++++++
-                                
-                            </div>
-                            <div class="new-page">
-                                <a href="post.html"><h2>plus....</h2></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                    <!--===============Fin ==================================-->
-                    <!--Vrai ===========================================Vrai-->
-                    <div class="article">
+                   <!--Vrai ===========================================Vrai-->
+                   <div class="article">
                     <div>
                         <div class="article-body">
                         <div class="profile">
                             <div class="profile-image">
                                 <div class="image">
-                                    <img src="/static/image/blank-profile-picture.png" alt="">
+                                   
                                 </div>
                                 <div class="description">
-                                    <h2>name</h2>
-                                    <h4>description</h4>
+                                    <h6>name</h6>
+                                    <h6>description</h6>
                                 </div>
                             </div>
                             
                             
                             <div class="date-creation">
-                                <h2>03</h2>
-                                <h4>March 2021</h4>
+                                <h6>03</h6>
+                                <h6>March 2021</h6>
                             </div>
                         </div>
                     
@@ -93,20 +55,135 @@
                         </div>
                         <div class="text">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam 
-                            ullam error sit, dolore distinctio tempore numquam debitis ut 
-                            perspiciatis adipisci 
+                            ullam error sit, 
                             
                         </div>
                         <div class="new-page">
-                            <a href="post.html"><h2>plus....</h2></a>
+                            <a href="post.html"><h4>plus....</h4></a>
                         </div>
                     </div>
                 </div>
             </div>
                 <!--===============Fin ==================================-->
+                    <!--===============Fin ==================================-->
+                    <!--Vrai ===========================================Vrai-->
+                    <div class="article">
+                    <div>
+                        <div class="article-body">
+                        <div class="profile">
+                            <div class="profile-image">
+                                <div class="image">
+                                   
+                                </div>
+                                <div class="description">
+                                    <h6>name</h6>
+                                    <h6>description</h6>
+                                </div>
+                            </div>
+                            
+                            
+                            <div class="date-creation">
+                                <h6>03</h6>
+                                <h6>March 2021</h6>
+                            </div>
+                        </div>
+                    
+                        <div class="article-image">
+                            <img src="/media/article_image/img2.jpg" alt="">
+                        </div>
+                        <div class="text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam 
+                            ullam error sit, 
+                            
+                        </div>
+                        <div class="new-page">
+                            <a href="post.html"><h4>plus....</h4></a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <img src="/static/image/next.png" alt="" id="nextBtn">
+                <!--===============Fin ==================================-->
+                 <!--Vrai ===========================================Vrai-->
+                 <div class="article">
+                    <div>
+                        <div class="article-body">
+                        <div class="profile">
+                            <div class="profile-image">
+                                <div class="image">
+                                   
+                                </div>
+                                <div class="description">
+                                    <h6>name</h6>
+                                    <h6>description</h6>
+                                </div>
+                            </div>
+                            
+                            
+                            <div class="date-creation">
+                                <h6>03</h6>
+                                <h6>March 2021</h6>
+                            </div>
+                        </div>
+                    
+                        <div class="article-image">
+                            <img src="/media/article_image/img2.jpg" alt="">
+                        </div>
+                        <div class="text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam 
+                            ullam error sit, 
+                            
+                        </div>
+                        <div class="new-page">
+                            <a href="post.html"><h4>plus....</h4></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                <!--===============Fin ==================================-->
+                 <!--Vrai ===========================================Vrai-->
+                 <div class="article">
+                    <div>
+                        <div class="article-body">
+                        <div class="profile">
+                            <div class="profile-image">
+                                <div class="image">
+                                   
+                                </div>
+                                <div class="description">
+                                    <h6>name</h6>
+                                    <h6>description</h6>
+                                </div>
+                            </div>
+                            
+                            
+                            <div class="date-creation">
+                                <h6>03</h6>
+                                <h6>March 2021</h6>
+                            </div>
+                        </div>
+                    
+                        <div class="article-image">
+                            <img src="/media/article_image/img2.jpg" alt="">
+                        </div>
+                        <div class="text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam 
+                            ullam error sit, 
+                            
+                        </div>
+                        <div class="new-page">
+                            <a href="post.html"><h4>plus....</h4></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                <!--===============Fin ==================================-->
+                
+            </div>
+          
         </div>
+
+        <!--===============Fin=======================-->
+        <!--=====Blog-ARTICLE ==========================-->
     </div>
 
     <script src="/static/js/scripts.js"></script>
