--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,8 +46,8 @@ a{
 }
 .all_article{
     width: 900px;
-    display: grid;
-    grid-template-columns: auto auto auto;
+    display: flex;
+    flex-wrap: wrap;
     gap: 20px;
     margin: 20px;
     background:rgba(246, 252, 252, 0.616);
@@ -57,7 +57,7 @@ a{
 }
 
 .article{
-    width: 100%;
+    width: 400px;
     border: 1px solid white;
     color: white;
     border-radius: 10px;
@@ -78,11 +78,11 @@ a{
 
 .article-image{
    
-    width: 100%;
+    width: 200px;
+    height: 200px;
     
    
 }
-
 
 
 
